@@ -5,6 +5,8 @@
    problem on Linux (fixes "could not set controlling tty" errors).
  - (djm) Merge FreeBSD PAM code: replaces PAM password auth kludge with 
    proper challenge-response module
+ - (djm) 2-clause license on loginrec.c, with permission from
+   andre@ae-35.com
 
 20030504
  - (dtucker) Bug #497: Move #include of bsd-cygwin_util.h to openbsd-compat.h.
